[tool.poetry]
name = "ariadne-users-service"
version = "0.1.0"
description = "A GraphQL users service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ariadne = "^0.1.0"
pydantic = "^0.17.0"
email-validator = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
ipdb = "^0.11.0"
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"